--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,6 +86,7 @@ select {
 
 .main {
   flex: 1 1 auto;
+  padding-top: 119px;
 }
 
 [class*="container"] {
@@ -93,6 +94,12 @@ select {
   margin: 0 auto;
   padding: 0 30px;
   flex-direction: column;
+}
+
+@media(max-width: 1023.98px) {
+  .main {
+    padding-top: 62px;
+  }
 }
 
 @media (max-width: 767.98px) {
