--- a/src/components/Pages/Home/HomeBanner/HomeBanner.module.scss
+++ b/src/components/Pages/Home/HomeBanner/HomeBanner.module.scss
@@ -1,6 +1,7 @@
 .banner {
   background: linear-gradient(90deg, var(--orange-text) 50%, #fff 0);
   height: calc(100vh - 119px);
+  padding-top: 119px;
 
   &__container {
     display: flex;
@@ -48,7 +49,7 @@
   .banner {
     background: var(--orange-text);
     height: max-content;
-    padding: 20px 0;
+    padding: 82px 0 20px 0;
     &__container {
       align-items: center;
       flex-direction: column;
