--- a/src/app/[webName]/page.module.scss
+++ b/src/app/[webName]/page.module.scss
@@ -1,3 +1,161 @@
 .post {
-  padding-top: 200px;
+  position: relative;
+  &__container {
+    font-weight: 400;
+  }
+  &__header {
+    background-color: var(--orange-text);
+    padding-top: 119px;
+    color: white;
+    height: 320px;
+    position: relative;
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    gap: 20px;
+    padding-bottom: 40px;
+  }
+
+  &__title {
+    font-weight: 400;
+    font-size: 42.3px;
+    line-height: 48px;
+    letter-spacing: -.02em;
+  }
+
+  &__desc {
+    color: white;
+    font-size: 16.1px;
+    line-height: 20px;
+    transition: opacity .2s ease-out 0s;
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  &__content {
+    display: flex;
+    gap: 40px;
+    padding: 40px 0;
+  }
+}
+
+.aside {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-size: 18.3px;
+  line-height: 24px;
+  letter-spacing: -.02em;
+  &__date {
+    display: inline-block;
+    font-weight: 400;
+    color: #333;
+  }
+
+  &__dateDesc {
+    display: inline-block;
+    font-weight: 500;
+    color: var(--orange-text);
+  }
+
+  &__status {
+    margin-bottom: 10px;
+  }
+
+  &__section {
+    padding: 0 150px 70px 0;
+    border-top: 1px solid rgba(51, 51, 51, .3);
+    border-bottom: 1px solid rgba(51, 51, 51, .3);
+    &:first-child {
+      border-bottom: 0;
+    }
+
+    span {
+      display: block;
+    }
+  }
+
+  &__info {
+    font-size: 14.1px;
+    line-height: 20px;
+    color: grey;
+    margin: 10px 0;
+  }
+}
+
+.content {
+  border-top: 1px solid rgba(51, 51, 51, .3);
+  border-bottom: 1px solid rgba(51, 51, 51, .3);
+  padding-top: 15px;
+  padding-bottom: 15px;
+  position: relative;
+  &__desc {
+    font-size: 26.4px;
+    line-height: 32px;
+    letter-spacing: -.02em;
+  }
+
+  &__text {
+    margin-top: 20px;
+    font-size: 21px;
+    line-height: 24px;
+    font-family: Calibri;
+  }
+
+  &__imgcnt {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    img {
+      display: block;
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
+  }
+
+  &__imgDesc {
+    border-bottom: 1px solid rgba(51, 51, 51, .3);
+  }
+}
+
+.background {
+  background-color: var(--orange-text);
+  position: absolute;
+  width: 100%;
+  height: 320px;
+  z-index: 1;
+  top: 0;
+}
+
+@media(max-width: 1023.98px) {
+  .post {
+    &__header {
+      padding-top: 82px;
+    }
+  }
+
+  .aside__section {
+    padding: 0 20px 70px 0;
+  }
+}
+
+@media(max-width: 767.98px) {
+  .post__content {
+    flex-direction: column-reverse;
+  }
+  .aside__section {
+    padding: 0 20px 20px 0;
+  }
+  .content {
+    border-bottom: 0;
+
+    &__imgcnt {
+      height: clamp(230px, 10vw, 410px);
+    }
+  }
 }
