--- a/src/app/[webName]/page.module.scss
+++ b/src/app/[webName]/page.module.scss
@@ -90,6 +90,7 @@
   border-top: 1px solid rgba(51, 51, 51, .3);
   border-bottom: 1px solid rgba(51, 51, 51, .3);
   padding-top: 15px;
+  padding-right: clamp(0px, 10vw,250px);
   padding-bottom: 15px;
   position: relative;
   &__desc {
@@ -109,6 +110,7 @@
     position: relative;
     width: 100%;
     height: 500px;
+    margin: 10px 0;
     img {
       display: block;
       width: 100%;
@@ -141,6 +143,10 @@
 
   .aside__section {
     padding: 0 20px 70px 0;
+  }
+
+  .content {
+    padding-right: 0;
   }
 }
 
