work with who-page

--- a/src/app/who-we/page.module.scss
+++ b/src/app/who-we/page.module.scss
@@ -1,7 +1,11 @@
 .who {
-
   &__container {
-    padding: 0 10px;
+    padding: 100px 10px;
+  }
+
+  &__cards {
+    display: flex;
+    justify-content: space-around;
   }
 }
 
@@ -15,6 +19,9 @@
 
   &__container {
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__content {
@@ -60,6 +67,66 @@
     border-top: 1px solid rgba(255, 255, 255, 0.3);
     padding: 30px 0 50px 0;
     margin-top: 50px;
+  }
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  &__title {
+    color: #333;
+    font-family: IBM Plex Serif;
+    font-size: 64px;
+    font-weight: 500;
+    line-height: 101%;
+    letter-spacing: -3.2px;
+  }
+
+  &__text {
+    color: #808080;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 127%;
+    letter-spacing: -0.62px;
+  }
+
+  &__link {
+    transition: opacity .3s ease-out 0s;
+  }
+
+  &__link:hover {
+    opacity: 0.8;
+  }
+}
+
+@media(max-width: 1439.98px) {
+  .card {
+    &__img {
+      max-width: 400px;
+      max-height: 300px;
+    }
+  }
+}
+
+@media(max-width: 1023.98px) {
+  .who {
+    &__container {
+      padding: 70px 10px;
+    }
+    &__cards {
+      flex-direction: column;
+      align-items: center;
+      gap: 50px;
+    }
+  }
+
+  .card {
+    align-items: center;
+    &__img {
+      max-width: 400px;
+      max-height: 300px;
+    }
   }
 }
 
