edited header section on istoriya page

--- a/src/app/who-we/istoriya/page.module.scss
+++ b/src/app/who-we/istoriya/page.module.scss
@@ -141,6 +141,11 @@
 
 @media(max-width: 1023.98px) {
   .header {
-      padding-top: 82px;
+    padding-top: 82px;
+    height: 220px;
+  }
+
+  .background {
+    height: 220px;
   }
 }
