--- a/src/app/who-we/istoriya/page.module.scss
+++ b/src/app/who-we/istoriya/page.module.scss
@@ -97,15 +97,21 @@
   }
 }
 
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .link {
   margin: 50px 0;
-  display: flex;
-
+  max-width: 900px;
+  width: 100%;
   &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: clamp(60px, 10vw, 200px);
+    gap: clamp(0px, 10vw, 200px);
     color: #333;
   }
 
@@ -126,7 +132,6 @@
     display: block;
     font-weight: 500;
     font-size: clamp(23px, 3vw, 38px);
-    font-family: Cambria, sans-serif;
     transition: 0.3s ease;
     margin-bottom: 20px;
   }
@@ -142,6 +147,64 @@
 
 .link:hover {
   .link__title {
+    color: var(--orange-text);
+  }
+}
+
+.files {
+  &__title {
+    font-weight: 400;
+    color: #333;
+    font-size: clamp(32px, 4.5vw, 57.8px);
+    line-height: 64px;
+    letter-spacing: -.02em;
+  }
+}
+
+.download {
+  margin: 50px 0;
+  max-width: 900px;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: clamp(0px, 10vw, 200px);
+    color: #333;
+  }
+
+  &__btn {
+    flex: 0 0 auto;
+    width: clamp(40px, 5vw, 90px);
+    height: clamp(40px, 5vw, 90px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: clamp(20px, 5vw, 60px);
+    padding-bottom: -3px;
+    border-radius: 50%;
+    background: var(--orange-text);
+  }
+  &__title {
+    display: block;
+    font-weight: 500;
+    font-size: clamp(18px, 3vw,23px);
+    transition: 0.3s ease;
+    margin-bottom: 20px;
+  }
+
+  &__desc {
+    display: block;
+    font-size: clamp(15px, 2vw, 18.3px);
+    line-height: 24px;
+    letter-spacing: -.02em;
+    color: grey;
+  }
+}
+
+.download:hover {
+  .download__title {
     color: var(--orange-text);
   }
 }
