--- a/src/app/who-we/kontakty-i-rekvizity/page.module.scss
+++ b/src/app/who-we/kontakty-i-rekvizity/page.module.scss
@@ -62,7 +62,6 @@
 .texts {
   display: flex;
   flex-direction: column;
-  gap: 50px;
 }
 
 .text {
@@ -70,12 +69,19 @@
   grid-template-columns: .2fr 1fr;
   grid-template-rows: auto;
   max-width: 900px;
+  border-bottom: 1px solid rgba(51, 51, 51, .3);
+  padding: 50px 0;
   &__title {
-
+    font-weight: 400;
+    font-size: 21.2px;
+    line-height: 28px;
+    letter-spacing: -.02em;
   }
 
   &__desc {
-
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 28px;
   }
 }
 
@@ -129,22 +135,43 @@
   }
 }
 
+.files {
+  &__title {
+    font-weight: 400;
+    color: #333;
+    font-size: clamp(32px, 4.5vw, 57.8px);
+    line-height: 64px;
+    letter-spacing: -.02em;
+  }
+}
+
 .download:hover {
   .download__title {
     color: var(--orange-text);
   }
 }
 
+.background {
+  background-color: var(--orange-text);
+  position: absolute;
+  width: 100%;
+  height: 320px;
+  z-index: 1;
+  top: 0;
+}
+
+
 
 @media(max-width: 1023.98px) {
   .content {
-    padding-right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .header {
     padding-top: 82px;
     height: 220px;
   }
-
   .background {
     height: 220px;
   }
@@ -155,19 +182,13 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 0fr);
+    &__title {
+      margin-bottom: 15px;
+    }
   }
+
   .content {
     border-bottom: 0;
     padding: 10px;
   }
-}
-
-
-.background {
-  background-color: var(--orange-text);
-  position: absolute;
-  width: 100%;
-  height: 320px;
-  z-index: 1;
-  top: 0;
 }
