Fixed bugs. Edit styles

--- a/src/app/what-we-do/page.module.scss
+++ b/src/app/what-we-do/page.module.scss
@@ -1,4 +1,4 @@
-.who {
+.wedo {
   &__container {
     padding: 100px 15px;
   }
@@ -74,7 +74,7 @@
 }
 
 @media(max-width: 1023.98px) {
-  .who {
+  .wedo {
     &__container {
       padding: 70px 10px;
     }
