--- a/src/app/who-we/page.module.scss
+++ b/src/app/who-we/page.module.scss
@@ -11,7 +11,7 @@
 
 .header {
   background-color: var(--orange-text);
-  max-height: 900px;
+  max-height: max-content;
   padding-top: 119px;
 
   display: flex;
@@ -32,20 +32,27 @@
   }
 
   &__title {
-    font-size: clamp(46px, 5vw, 96px);
+    font-size: clamp(36px, 5vw, 96px);
     font-weight: 600;
-    letter-spacing: -3.84px;
+    letter-spacing: -.84px;
     line-height: 90%;
+    position: absolute;
+    z-index: 5;
+    left: 100px;
+    bottom: 20%;
+    color: #FFFFFF;
   }
 
-  &__imgcnt{
+  &__imgcnt {
     position: relative;
     height: 600px;
   }
 
   &__nextcnt {
     display: flex;
+    justify-content: end;
     width: 100%;
+    position: relative;
   }
 
   &__img {
@@ -74,6 +81,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+
   &__title {
     color: #333;
     font-family: IBM Plex Serif;
@@ -114,6 +122,7 @@
     &__container {
       padding: 70px 10px;
     }
+
     &__cards {
       flex-direction: column;
       align-items: center;
@@ -121,8 +130,14 @@
     }
   }
 
+
+  .header {
+    padding-top: 82px;
+  }
+
   .card {
     align-items: center;
+
     &__img {
       max-width: 400px;
       max-height: 300px;
@@ -139,7 +154,7 @@
   }
 }
 
-@media screen and (max-width: 2558.98px) and (min-width: 1919.98px)  {
+@media screen and (max-width: 2558.98px) and (min-width: 1919.98px) {
   .header__imgcnt {
     width: calc(50% + 448px);
     max-width: calc(50% + 448px);
@@ -179,6 +194,15 @@
     height: 0;
   }
 
+  .header__title {
+    position: relative;
+    left: 0;
+  }
+
+  .header__nextcnt {
+    justify-content: center;
+  }
+
   .header__content {
     padding: 0 30px;
   }
@@ -186,11 +210,5 @@
   .header__text {
     padding: 15px 0 25px 0;
     margin-top: 25px;
-  }
-}
-
-@media(max-width: 1023.98px) {
-  .header{
-      padding-top: 82px;
   }
 }
