--- a/src/app/what-we-do/page.module.scss
+++ b/src/app/what-we-do/page.module.scss
@@ -79,28 +79,29 @@
   gap: 50px;
 
   &__big {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(calc(320px + 15%), 1fr));
+    grid-template-rows: 1fr;
+    grid-auto-flow: dense;
+    gap: 20px;
   }
 
   &__small {
-
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(calc(320px + 5%), 1fr));
+    grid-template-rows: 1fr;
+    grid-auto-flow: dense;
+    gap: 20px;
   }
 }
 
 .card {
-  width: 600px;
-  color: #333;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 30px;
-
   &__title {
+    display: block;
     font-weight: 500;
     font-size: clamp(30px, 3vw, 56px);
-    line-height: 64px;
+    line-height: 120%;
+    min-height: 100px;
   }
 
   &__img {
@@ -118,6 +119,7 @@
     }
   }
   &__text {
+    display: block;
     color: grey;
     font-size: 24.9px;
     line-height: 40px;
@@ -125,6 +127,54 @@
   }
 }
 
+.scard {
+  width: 100%;
+  &__title {
+    display: block;
+    font-weight: 500;
+    font-size: clamp(30px, 3vw, 56px);
+    line-height: 120%;
+    min-height: 140px;
+  }
+
+  &__img {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    margin: 10px 0;
+    object-fit: cover;
+
+    img {
+      display: block;
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
+  }
+
+  &__text {
+    display: block;
+    color: grey;
+    font-size: 24.9px;
+    line-height: 40px;
+    letter-spacing: -.2px;
+  }
+}
+
+@media(max-width: 1585.98px) {
+  .card {
+    &__title {
+      min-height: 70px;
+    }
+  }
+
+  .scard {
+    &__title {
+      min-height: 8vw;
+    }
+  }
+}
 
 @media(max-width: 1023.98px) {
   .wedo {
@@ -141,6 +191,50 @@
     &__big {
       flex-direction: column;
       align-items: center;
+    }
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__title {
+      min-height: 0;
+    }
+
+    &__img {
+      height: 250px;
+    }
+  }
+
+  .scard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__title {
+      min-height: 40px;
+    }
+  }
+}
+
+@media(max-width: 767.98px) {
+  .cards {
+    &__big {
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+
+    &__small {
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+  }
+}
+
+@media(max-width: 493.98px) {
+  .card {
+    &__img {
+      img {
+        max-width: 400px;
+      }
     }
   }
 }
