--- a/src/components/Pages/Publications/Posts/Posts.module.scss
+++ b/src/components/Pages/Publications/Posts/Posts.module.scss
@@ -1,12 +1,15 @@
 .posts {
+  margin: 30px 0;
   &__container {
     padding-top: 119px;
   }
 }
 
-//.cards {
-//  display: flex;
-//}
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
 @media(max-width: 1023.98px) {
   .posts {
