--- a/src/components/TheCardProps/TheCardProps.module.scss
+++ b/src/components/TheCardProps/TheCardProps.module.scss
@@ -6,15 +6,33 @@
   color: #333;
   transition: color .2s ease-out 0s;
 
-  &:first-child {
+  //&:first-child {
+  //  padding-left: 0;
+  //  border-right: 1px solid rgba(59, 59, 59, .3);
+  //}
+  //&:nth-child(2) {
+  //  border-right: 1px solid rgba(59, 59, 59, .3);
+  //}
+  //&:nth-child(3) {
+  //  padding-right: 0;
+  //}
+
+  &:nth-child(even) {
+    border-right: 1px solid rgba(59, 59, 59, .3);
+  }
+
+  &:nth-child(odd) {
+    border-right: 1px solid rgba(59, 59, 59, .3);
+  }
+
+  &:nth-child(1),
+  &:nth-child(3n + 1) {
     padding-left: 0;
-    border-right: 1px solid rgba(59, 59, 59, .3);
   }
-  &:nth-child(2) {
-    border-right: 1px solid rgba(59, 59, 59, .3);
-  }
-  &:nth-child(3) {
+
+  &:nth-child(3n) {
     padding-right: 0;
+    border-right: none;
   }
 
   &__imgcnt {
