--- a/src/components/TheCardProps/TheCardProps.module.scss
+++ b/src/components/TheCardProps/TheCardProps.module.scss
@@ -6,17 +6,6 @@
   color: #333;
   transition: color .2s ease-out 0s;
 
-  //&:first-child {
-  //  padding-left: 0;
-  //  border-right: 1px solid rgba(59, 59, 59, .3);
-  //}
-  //&:nth-child(2) {
-  //  border-right: 1px solid rgba(59, 59, 59, .3);
-  //}
-  //&:nth-child(3) {
-  //  padding-right: 0;
-  //}
-
   &:nth-child(even) {
     border-right: 1px solid rgba(59, 59, 59, .3);
   }
@@ -87,8 +76,8 @@
 
   &__status {
     display: block;
-    font-size: 21.2px;
-    line-height: 28px;
+    font-size: clamp(19px, 2vw,21.2px);
+    line-height: 24px;
     font-weight: 500;
     color: var(--orange-text);
   }
@@ -106,15 +95,31 @@
     border-bottom: 1px solid rgba(59, 59, 59, .3);
     padding: 20px;
 
-    &:first-child {
+    &:nth-child(even) {
+      border-right: 0;
+    }
+
+    &:nth-child(odd) {
+      padding-right: 20px;
+    }
+
+    &:nth-child(1),
+    &:nth-child(3n + 1) {
       padding-left: 20px;
       border-right: 0;
     }
-    &:nth-child(2) {
-      border-right: 0;
+
+    &:nth-child(3n) {
+      padding-right: 0;
+      border-right: none;
     }
-    &:nth-child(3) {
-      padding-right: 20px;
+  }
+}
+
+@media(max-width: 919.98px) {
+  .card {
+    &:nth-child(odd) {
+      border-right: none;
     }
   }
 }
