--- a/src/components/TheCardProps/TheCardProps.module.scss
+++ b/src/components/TheCardProps/TheCardProps.module.scss
@@ -6,6 +6,12 @@
   color: #333;
   transition: color .2s ease-out 0s;
 
+  &:hover {
+    .card__title {
+      color: var(--orange-text);
+    }
+  }
+
   &:nth-child(even) {
     border-right: 1px solid rgba(59, 59, 59, .3);
   }
@@ -50,6 +56,7 @@
     display: flex;
     justify-content: space-between;
     padding-top: 48px;
+    padding-bottom: 15px;
   }
 
   &__title {
@@ -79,12 +86,6 @@
     font-size: clamp(19px, 2vw,21.2px);
     line-height: 24px;
     font-weight: 500;
-    color: var(--orange-text);
-  }
-}
-
-.card:hover {
-  .card__title {
     color: var(--orange-text);
   }
 }
